--- a/public/styles/to-top-button.css
+++ b/public/styles/to-top-button.css
@@ -2,6 +2,7 @@
  bottom: 10px;
  right: 8px; 
  font-family: 'bungee', sans-serif;
+ font-size: 50px;
  position: fixed;
  z-index:99;
  color: #7A8D9B; 
